--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/dispolitics
+spring.datasource.url=jdbc:mysql://localhost:3306/dispolitics?serverTimezone=MSK
 spring.datasource.username=test_user
 spring.datasource.password=password
